--- a/pokedex/pokedex-web/src/ngfrontend/src/app/full-pokedex/full-pokedex.component.html
+++ b/pokedex/pokedex-web/src/ngfrontend/src/app/full-pokedex/full-pokedex.component.html
@@ -59,8 +59,7 @@
     <div class="row">
         <ng-container *ngFor="let pokemonVariants of pokemons; index as iV;">
             <ng-container *ngFor="let pokemon of pokemonVariants; index as i;">
-
-                <div class="col-xl-2 col-md-6 mb-4 pokemons pokemon-{{pokemon.de}} pokemon-{{pokemon.en}} pokemon-{{pokemon.es}} pokemon-{{pokemon.fr}} pokemon-{{pokemon.it}} pokemon-{{pokemon.ja}} pokemon-{{pokemon.ko}}  pokemon-{{pokemon.dex}} filter-all filter-type-{{pokemon.types[0]}} filter-type-{{pokemon.types[1]}} fiter-shiny-{{pokemon.shiny}}  fiter-region-{{pokemon.region[0]}} fiter-region-{{pokemon.region[1]}}  hidden-{{pokemon.shiny}}"
+                <div class="col-xl-2 col-md-6 mb-4 pokemons pokemon-{{pokemon.de}} pokemon-{{pokemon.en}} pokemon-{{pokemon.es}} pokemon-{{pokemon.fr}} pokemon-{{pokemon.it}} pokemon-{{pokemon.ja}} pokemon-{{pokemon.ko}}  pokemon-{{pokemon.dex}} filter-all filter-type-{{pokemon.types[0]}} filter-type-{{pokemon.types[1]}} filter-shiny-{{pokemon.shiny}}  filter-region-{{pokemon.regions[0]}} filter-region-{{pokemon.regions[1]}} filter-region-{{pokemon.regions[2]}} hidden-{{pokemon.shiny}} filter-region-{{pokemon.regions[3]}}"
                     (click)="markPokemon($event)">
                     <div class="card border-left-primary shadow h-100 py-2 ">
                         <div class="card-body">
@@ -80,32 +79,32 @@
                                             id="img-pokemon-{{pokemon.dex}}" class="img-pokemon"
                                             style="width:120px; height:7.5rem" src="{{pokemon.url_front}}" />
                                     </div>
-
                                     <div _ngcontent-nlx-c101="" _ngcontent-rgn-c101=""
                                         class="OFF__text-xs font-weight-bold text-primary OFF__text-uppercase mb-1"
-                                        style="height:2.2rem; margin-top:23px;font-size: 0.8rem; background-color: #dddfeb; padding: 9px 4px 9px 4px; border-radius: 3px 3px 3px 3px;">
+                                        style="vertical-align:middle;height:2.2rem; margin-top:23px;font-size: 0.8rem; background-color: #dddfeb; padding: 1px 4px 9px 4px; border-radius: 3px 3px 3px 3px;">
                                         <table _ngcontent-nlx-c101="">
                                             <tbody>
                                                 <tr _ngcontent-nlx-c101="">
-                                                    <td _ngcontent-nlx-c101="">Type: </td>
+                                                    <td _ngcontent-nlx-c101="" style="vertical-align: top;">Type: </td>
                                                     <td _ngcontent-nlx-c101=""></td>
-                                                    <td _ngcontent-nlx-c101="">
+                                                    <td _ngcontent-nlx-c101="" style="vertical-align: top;">
                                                         {{pokemon.types[0]}}&nbsp;&nbsp;{{pokemon.types[1]}}</td>
                                                 </tr>
                                             </tbody>
                                         </table>
                                     </div>
-
                                     <div _ngcontent-nlx-c101="" _ngcontent-rgn-c101=""
                                         class="OFF__text-xs font-weight-bold text-primary OFF__text-uppercase mb-1"
-                                        style="height:2.2rem; OFF__margin-top:23px;font-size: 0.8rem; background-color: #dddfeb; padding: 9px 4px 9px 4px; border-radius: 3px 3px 3px 3px;">
+                                        style="vertical-align:middle; height:2.2rem;;font-size: 0.8rem; background-color: #dddfeb; padding: 1px 4px 9px 4px; border-radius: 3px 3px 3px 3px;">
                                         <table _ngcontent-nlx-c101="">
                                             <tbody>
                                                 <tr _ngcontent-nlx-c101="">
-                                                    <td _ngcontent-nlx-c101="">Region: </td>
+                                                    <td _ngcontent-nlx-c101="" style="vertical-align: top;">Region:
+                                                    </td>
                                                     <td _ngcontent-nlx-c101=""></td>
-                                                    <td _ngcontent-nlx-c101="">
-                                                        {{pokemon.types[0]}}  {{pokemon.types[1]}}</td>
+                                                    <td _ngcontent-nlx-c101="" style="vertical-align: middle; line-height:14px; ">
+                                                        {{pokemon.regions[0]}} {{pokemon.regions[1]}}
+                                                        {{pokemon.regions[2]}} {{pokemon.regions[3]}}</td>
                                                 </tr>
                                             </tbody>
                                         </table>
@@ -156,26 +155,23 @@
                                     </div>
                                     <ng-template [ngIf]="pokemon.shiny" [ngIfElse]="notShiny2">
                                         <button style="height:2.4rem; margin-top: 5px;" data-placement="right"
-                                            (click)="toggleShiny('.fiter-shiny-true.pokemon-' + pokemon.dex)"
+                                            (click)="toggleShiny('.filter-shiny-true.pokemon-' + pokemon.dex)"
                                             class="btn btn-facebook btn-block tooltips" title="Hide Shiny Pokémon!"> <i
                                                 class="fas fa-times-circle" style="font-size:18px;"></i></button>
                                     </ng-template>
                                     <ng-template #notShiny2>
                                         <button style="height:2.4rem; margin-top: 5px;" data-placement="right"
-                                            (click)="toggleShiny('.fiter-shiny-true.pokemon-' + pokemon.dex)"
+                                            (click)="toggleShiny('.filter-shiny-true.pokemon-' + pokemon.dex)"
                                             class="btn btn-facebook btn-block tooltips" title="Show Shiny Pokémon!"> <i
                                                 class="fas fa-star" style="font-size:18px;"></i></button>
                                     </ng-template>
                                     <button style="height:2.4rem; margin-top: 5px;" data-placement="right"
-                                    (click)="toggleShiny('.fiter-shiny-true.pokemon-' + pokemon.dex)"
-                                    class="btn btn-facebook btn-block tooltips" title="Save Pokémon in Your Collection!"> <i
-                                        class="fas fa-plus" style="font-size:18px;"></i></button>
+                                        (click)="toggleShiny('.filter-shiny-true.pokemon-' + pokemon.dex)"
+                                        class="btn btn-facebook btn-block tooltips"
+                                        title="Save Pokémon in Your Collection!"> <i class="fas fa-plus"
+                                            style="font-size:18px;"></i></button>
                                 </div>
                             </div>
-                            <!-- <a href="#" class="btn btn-facebook btn-block tooltips" title="Save Pokémon in Your Collection."
-                                data-placement="right"><i class="fas fa-plus"
-                                    style="font-size: 20px; color:white"></i>&nbsp;&nbsp;Add
-                                To Collection</a> -->
                         </div>
                     </div>
                 </div>
