--- a/pokedex/pokedex-web/src/ngfrontend/src/app/app.component.html
+++ b/pokedex/pokedex-web/src/ngfrontend/src/app/app.component.html
@@ -67,7 +67,9 @@
                         Full Pokedex</a>
                 </div>
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item filter" [routerLink]=""><i class="fas fa-dot-circle"></i>&nbsp; My
+                    <a class="collapse-item filter" [routerLink]="" data-filterclass="filter-inCollection-true"
+                        (click)="globalFunctions.toggleSelection(false, $event)"><i class="fas fa-dot-circle" style="color:#ffc107;"></i>&nbsp;
+                        My
                         Collection</a>
                 </div>
                 <div class="bg-white py-2 collapse-inner rounded">
@@ -76,7 +78,7 @@
                             class="fas fa-map-marker"></i>&nbsp;Regular</a>
                     <a class="collapse-item filter" [routerLink]="" data-filterclass="filter-shiny-true"
                         (click)="globalFunctions.toggleSelection(false, $event)"><i
-                            class="fas fa-star"></i>&nbsp;Shiny</a>
+                            class="fas fa-star" style="color:#f16fe6;"></i>&nbsp;Shiny</a>
                 </div>
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h1 class="collapse-header" style="font-size:0.9rem">Type</h1>
