REST PUT, DELETE

--- a/pokedex/pokedex-web/src/ngfrontend/src/app/app.component.html
+++ b/pokedex/pokedex-web/src/ngfrontend/src/app/app.component.html
@@ -68,8 +68,8 @@
                 </div>
                 <div class="bg-white py-2 collapse-inner rounded">
                     <a class="collapse-item filter" [routerLink]="" data-filterclass="filter-inCollection-true"
-                        (click)="globalFunctions.toggleSelection(false, $event)"><i class="fas fa-dot-circle" style="color:#ffc107;"></i>&nbsp;
-                        My
+                        (click)="globalFunctions.toggleSelection(false, $event)"><i class="fas fa-compress-arrows-alt" style="color:#ffc107;font-size: 16px;line-height: 14px;"></i>&nbsp;
+                        My 
                         Collection</a>
                 </div>
                 <div class="bg-white py-2 collapse-inner rounded">
